--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,9 @@ jobs:
       - name: Install Aftman
         uses: ok-nick/setup-aftman@v0.3.0
 
+      - name: Install Dependencies
+        run: wally install
+
       - name: Build
         run: rojo build --output build.rbxm default.project.json
 
@@ -33,6 +36,9 @@ jobs:
 
       - name: Install Aftman
         uses: ok-nick/setup-aftman@v0.3.0
+
+      - name: Install Dependencies
+        run: wally install --project-path example
 
       - name: Build Example Game
         run: rojo build --output build.rbxl example.project.json
