--- a/example/wally.toml
+++ b/example/wally.toml
@@ -1,9 +1,9 @@
 [package]
-name = "evaera/matter-example"
+name = "matter-ecs/matter-example"
 version = "0.1.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-plasma = "evaera/plasma@0.4.1"
+plasma = "matter-ecs/plasma@0.4.1"
 rewire = "sayhisam1/rewire@0.3.0"
