correctly ID archetypes so we don't keep creating them for each entity

--- a/bench.project.json
+++ b/bench.project.json
@@ -17,6 +17,9 @@
             },
             "PinnedMatter": {
                 "$path": "PinnedMatter.rbxm"
+            },
+            "Jecs": {
+                "$path": "Jecs.luau"
             }
         },
         "ServerStorage": {
