--- a/wally.toml
+++ b/wally.toml
@@ -1,7 +1,7 @@
 [package]
 name = "matter-ecs/matter"
 description = "A modern ECS library for Roblox"
-version = "0.8.4"
+version = "0.9.0-beta.0"
 license = "MIT"
 authors = [
     "Eryn L. K.",
@@ -18,6 +18,7 @@ exclude = [
     "build",
     "pages",
     "tests",
+    "benchmarks",
     "AttackOfTheKillerRoombas.rbxl",
     "AttackOfTheKillerRoombas.rbxl.lock",
     "matter.rbxl",
