--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Install Node
         uses: actions/setup-node@v4
+        with:
+          node-version: 22
 
       - name: Install Moonwave
         run: npm install -g moonwave
