--- a/benchmark.project.json
+++ b/benchmark.project.json
@@ -8,8 +8,11 @@
       "Matter": {
         "$path": "lib"
       },
-      "PinnedMatter": {
+      "Matter_0_8": {
         "$path": "pinned/Matter_0_8_4.rbxm"
+      },
+      "Matter_0_9": {
+        "$path": "pinned/Matter_0_9_0.rbxm"
       }
     },
     "ServerStorage": {
